--- a/src/components/cart-modal/style.css
+++ b/src/components/cart-modal/style.css
@@ -19,7 +19,6 @@
   display: flex;
   flex-direction: column;
   width: 960px;
-  min-height: 407px;
   padding-bottom: 70px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -30,6 +29,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  padding-bottom: 23px;
   background: #f5f5f5;
   border-radius: 10px 10px 0 0;
 }
@@ -37,19 +37,24 @@
 .CartModal__Title {
   flex-grow: 1;
   margin: 0;
+  font-size: 32px;
   line-height: 37px;
 }
 
 .CartModal__Button {
   width: 76px;
+  height: 21px;
+  margin-top: 7px;
   margin-right: 12px;
+  font-size: 13px;
 }
 
 .CartModal__List {
-  min-height: 198px;
+  margin-top: 71px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  border-top: 1px dashed #ccc;
 }
 
 .CartModal__Empty {
