добавлены стили, постраничный роутинг

--- a/src/components/basket-tool/style.css
+++ b/src/components/basket-tool/style.css
@@ -10,6 +10,21 @@
 
 }
 
+.BasketTool-main {
+  height: 21px;
+  font-size: 18;
+  color: #0087e9;
+  text-decoration: underline;
+  margin-right: 20px;
+}
+
+.BasketTool-switcher {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: auto;
+}
+
 .BasketTool-total {
   font-weight: bold;
   margin: 0 20px;
