--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -19,6 +19,15 @@
   padding: 20px 10px;
 }
 
+.Item-link {
+  text-decoration: none;
+  color: #000000;
+}
+
+.Item-link:hover {
+  text-decoration: underline;
+}
+
 .Item-actions {
   padding: 20px 20px 20px 10px;
   display: flex;
@@ -31,4 +40,8 @@
   padding: 0 0 0 10px;
   white-space: nowrap;
   font-size: 18px;
+}
+
+.Item-button {
+  min-width: 75px;
 }
