--- a/src/components/pagination/style.css
+++ b/src/components/pagination/style.css
@@ -1,5 +1,40 @@
-.Controls {
+.Pagination {
   display: flex;
   justify-content: flex-end;
   padding: 20px;
+  column-gap: 2px;
+}
+
+.Pagination__Item {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 20px;
+  height: 20px;
+  border: none;
+  background-color: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
+  user-select: none
+}
+
+.Pagination__Item--Current {
+  color: #ffffff;
+  background-color: #0087e9;
+  pointer-events: none;
+}
+
+.Pagination__Item--Dots {
+  color: #cccccc;
+  pointer-events: none;
+}
+
+.Pagination__Item:hover {
+  background-color: #e1e1e1;
 }
