--- a/src/components/comment-form/style.css
+++ b/src/components/comment-form/style.css
@@ -1,5 +1,57 @@
+.CommentForm {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 10px;
+  width: 100%;
+}
+
+.CommentForm-title {
+  margin: 0;
+  line-height: 14px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.CommentForm-text {
+  width: 100%;
+  height: 80px;
+  padding: 4px 5px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  resize: none;
+}
+
+.CommentForm-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CommentForm-submit {
+  box-sizing: border-box;
+  min-width: 90px;
+  margin-right: 10px;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  padding: 3px 8px 2px 9px;
+}
+
+.CommentForm-cancel {
+  box-sizing: border-box;
+  min-width: 67px;
+  margin-right: 10px;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 400;
+  padding: 3px 8px 2px 9px;
+}
+
 .CommentForm-no-auth {
-  margin-top: 30px;
+  margin-top: 20px;
   line-height: 18px;
   font-size: 16px;
   font-weight: 400;
