--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -1,5 +1,39 @@
 .Comment {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 10px;
   margin-left: inherit;
+}
+
+.Comment-head {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.Comment-author {
+  margin: 0;
+  margin-right: 10px;
+  line-height: 14px;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.Comment-date {
+  margin: 0;
+  margin-right: 10px;
+  line-height: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #666666;
+}
+
+.Comment-text {
+  margin: 0;
+  line-height: 16px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .Comment-button {
