--- a/src/components/comment/style.css
+++ b/src/components/comment/style.css
@@ -30,6 +30,9 @@
 }
 
 .Comment-text {
+  display: flex;
+  flex-wrap: wrap;
+  word-break: break-word;
   margin: 0;
   line-height: 16px;
   font-size: 14px;
